# vcatt

./: .gitignore  .travis.yml  LICENSE  README.md  stack.yaml  vc-tree.cabal  vcatt.cabal
app/: Main.hs
src/VC/: Tree.hs
