name:                vcatt
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/bergey/vcatt
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@teallabs.org
copyright:           BSD3
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     VC.Tree
  build-depends:       base >= 4.7 && < 5
                     , shelly
                     , extra
                     , system-filepath
  default-language:    Haskell2010

executable vcatt
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vcatt
                     , shelly
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bergey/vc-tree
